feat: add graceful shutdown (#7)
